tests/spec/emit/snapshots/displayable_user_to_string_suppresses_synthesis.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[displayable]\nstruct Point { x: int, y: int }\n\nimpl Point {\n  fn to_string(self) -> string {\n    \"p\"\n  }\n}\n"
---
package main

import "fmt"

type Point struct {
	x int
	y int
}

func (p Point) String() string {
	return fmt.Sprintf("Point { x: %v, y: %v }", p.x, p.y)
}

func (p Point) to_string() string {
	return "p"
}
