tests/spec/emit/snapshots/diverging_if_shadowed_else_binding_does_not_leak.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(c: bool) -> int {
    let count = 10
    if c {
      return 0
    } else {
      let count = 5
      let _ = count
    }
    count
  }
---
package main

func test(c bool) int {
	count := 10
	if c {
		return 0
	}
	return count
}
