tests/spec/emit/snapshots/doc_comment_multiline.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  /// Calculates the factorial of a number.
  ///
  /// Returns 1 for n <= 1.
  fn factorial(n: int) -> int {
    if n <= 1 { 1 } else { n * factorial(n - 1) }
  }
---
package main

// Calculates the factorial of a number.
//
// Returns 1 for n <= 1.
func factorial(n int) int {
	if n <= 1 {
		return 1
	}
	return n * factorial(n-1)
}
