tests/spec/emit/snapshots/doc_comment_on_const.snap
---
source: tests/spec/emit/types.rs
description: |
  
  /// The maximum number of connections.
  const MAX_CONNECTIONS: int = 100
---
package main

// The maximum number of connections.
const MaxConnections int = 100
