tests/spec/emit/snapshots/doc_comment_on_enum.snap
---
source: tests/spec/emit/types.rs
description: |
  
  /// Represents the status of a task.
  enum Status { Pending, Running, Complete }
---
package main

func MakeStatusPending() Status {
	return Status{Tag: StatusPending}
}

func MakeStatusRunning() Status {
	return Status{Tag: StatusRunning}
}

func MakeStatusComplete() Status {
	return Status{Tag: StatusComplete}
}

// Represents the status of a task.
type StatusTag uint8

const (
	StatusPending StatusTag = iota
	StatusRunning
	StatusComplete
)

type Status struct {
	Tag StatusTag
}
