tests/spec/emit/snapshots/doc_comment_on_enum_variants.snap
---
source: tests/spec/emit/types.rs
description: |
  
  /// Result of a network operation.
  enum NetworkResult {
    /// The operation succeeded.
    Success,
    /// The operation timed out.
    Timeout,
    /// The operation failed with an error code.
    Error(int),
  }
---
package main

func MakeNetworkResultSuccess() NetworkResult {
	return NetworkResult{Tag: NetworkResultSuccess}
}

func MakeNetworkResultTimeout() NetworkResult {
	return NetworkResult{Tag: NetworkResultTimeout}
}

func MakeNetworkResultError(arg0 int) NetworkResult {
	return NetworkResult{Tag: NetworkResultError, Error: arg0}
}

// Result of a network operation.
type NetworkResultTag uint8

const (
	// The operation succeeded.
	NetworkResultSuccess NetworkResultTag = iota
	// The operation timed out.
	NetworkResultTimeout
	// The operation failed with an error code.
	NetworkResultError
)

type NetworkResult struct {
	Tag   NetworkResultTag
	Error int
}
