tests/spec/emit/snapshots/doc_comment_on_function.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  /// Adds two integers together.
  fn add(a: int, b: int) -> int {
    a + b
  }
---
package main

// Adds two integers together.
func add(a, b int) int {
	return a + b
}
