tests/spec/emit/snapshots/doc_comment_on_impl_method.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Counter { count: int }
  
  impl Counter {
    /// Creates a new counter starting at zero.
    fn new() -> Counter {
      Counter { count: 0 }
    }
  }
---
package main

type Counter struct {
	count int
}

// Creates a new counter starting at zero.
func Counter_new() Counter {
	return Counter{count: 0}
}
