tests/spec/emit/snapshots/doc_comment_on_interface.snap
---
source: tests/spec/emit/types.rs
description: |
  
  /// Types that can be displayed as text.
  interface Displayable {
    fn display() -> string;
  }
---
package main

// Types that can be displayed as text.
type Displayable interface {
	display() string
}
