tests/spec/emit/snapshots/doc_comment_on_public_function.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  /// A publicly exported function.
  pub fn greet(name: string) -> string {
    f"Hello, {name}!"
  }
---
package main

// A publicly exported function.
func Greet(name string) string {
	return "Hello, " + name + "!"
}
