tests/spec/emit/snapshots/doc_comment_on_struct.snap
---
source: tests/spec/emit/types.rs
description: |
  
  /// A 2D point with x and y coordinates.
  struct Point { x: int, y: int }
---
package main

// A 2D point with x and y coordinates.
type Point struct {
	x int
	y int
}
