tests/spec/emit/snapshots/doc_comment_on_struct_fields.snap
---
source: tests/spec/emit/types.rs
description: "input: \n/// A user in the system.\nstruct User {\n  /// The user's display name.\n  pub name: string,\n  /// The user's age in years.\n  age: int,\n}\n"
---
package main

// A user in the system.
type User struct {
	// The user's display name.
	Name string
	// The user's age in years.
	age int
}
